# SQL-Chat

./: README.md  app.py  commands.md  pyproject.toml  requirements.txt
