[project]
name = "sql-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.17",
    "duckdb>=1.3.2",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "mysql-connector-python>=9.4.0",
    "numexpr>=2.11.0",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "unstructured>=0.18.13",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.2",
]
